# rattlesnake

./: CREDITS.md  LICENSE  README.md
.github/: dependabot.yml
frontend/: ENVIRONMENT.md  SELFHOSTING.md  env.example  package-lock.json  package.json  tailwind.config.ts
frontend/scripts/: worker.ts
frontend/src/: auth.ts
frontend/src/app/: layout.tsx  loading.tsx  not-found.tsx
frontend/src/app/(rattlesnake)/: layout.tsx  page.tsx
frontend/src/app/api/: openapi.yaml
frontend/src/app/api-docs/: layout.tsx  page.tsx
frontend/src/app/api/openapi/: route.ts
frontend/src/app/api/v1/: .gitkeep
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/components/features/: footer.tsx  navbar.tsx
frontend/src/components/global/: container.tsx  wrapper.tsx
frontend/src/components/report/: FormattedReport.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  gContainer.tsx  gMesh.tsx  input.tsx  magic-card copy.tsx  orbiting-circles.tsx  scroll-area.tsx  sheet.tsx
frontend/src/constants/: fonts.ts  index.ts
frontend/src/ext/: gradient.jsx
frontend/src/lib/: audit-log.ts  mongodb.ts  storage.ts
frontend/src/styles/: globals.css
frontend/src/types/: audit-log.ts  scan.ts
frontend/src/utils/: index.ts  metadata.ts
scanner/: Cargo.toml
scanner/src/: main.rs  yara.rs
scanner/src/rules/: authentication.yara  class_loading.yara  code_analysis.yara  cryptography.yara  executables.yara  file_paths.yara  reflection.yara  runtime.yara  urls.yara
scanner/src/rules/deprecated/: filesystem.yara  network.yara  obfuscation.yara
(+6 files in other folders)
