[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
yara-x = "0.13.0"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
clap = { version = "4.4", features = ["derive"] }
zip = "0.6"
sha2 = "0.10"
base64 = "0.21"
warp = "0.3"