[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
yara-x = "0.15.0"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
clap = { version = "4.5", features = ["derive"] }
zip = "3.0"
sha2 = "0.10"
base64 = "0.22"
warp = "0.3"